--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/home/bridgelabz/Documents/workspace-sts-3.9.5.RELEASE/SpringLoginRegistration","type":"PROJECT","hints":{"PROJECT_NAME":"SpringLoginRegistration"}},"com.bridgeIt:user:1.0.0"],[{"location":"/home/bridgelabz/.m2/repository/org/hyperledger/fabric-sdk-java/fabric-sdk-java/1.0.1/fabric-sdk-java-1.0.1.jar","type":"JAR","hints":{}},"org.hyperledger.fabric-sdk-java:fabric-sdk-java:1.0.1"]]
